[package]
name = "chat-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "EventTarget",
  "Event",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "HtmlDivElement",
  "Window",
  "Location",
  "KeyboardEvent",
  "Request",
  "RequestInit",
  "Response",
  "Headers",
]
